syntax = "proto3";

package calculator;

option go_package = "github.com/maksroxx/DeliveryService/proto/calculator;calculatorpb";

service CalculatorService {
  rpc CalculateDeliveryCost (CalculateDeliveryCostRequest) returns (CalculateDeliveryCostResponse);
  rpc CalculateByTariffCode (CalculateByTariffRequest) returns (CalculateDeliveryCostResponse);
  rpc GetTariffList (TariffListRequest) returns (TariffListResponse);
}

message CalculateDeliveryCostRequest {
  double weight = 1;
  string from = 2;
  string to = 3;
  string address = 4;
  int32 length = 5;
  int32 width = 6;
  int32 height = 7;
}

message CalculateDeliveryCostResponse {
  double cost = 1;
  int32 estimated_hours = 2;
  string currency = 3;
}

message CalculateByTariffRequest {
  double weight = 1;
  string from = 2;
  string to = 3;
  string address = 4;
  int32 length = 5;
  int32 width = 6;
  int32 height = 7;
  string tariff_code = 8;
}

message TariffListRequest {}

message Tariff {
  string code = 1;
  string name = 2;
  double base_rate = 3;
  double price_per_km = 4;
  double price_per_kg = 5;
  string currency = 6;
  double volumetric_divider = 7;
  int32 speed_kmph = 8;
}

message TariffListResponse {
  repeated Tariff tariffs = 1;
}